--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,7 +58,7 @@
                             </mat-card>
                         </div>
                     </div>
-                    <div class="row j-l mx-auto mt-5 msg">Sounds good! Upload a CIM document and i will generate a draft screening memo for your review</div>  
+                    <!-- <div class="row j-l mx-auto mt-5 msg">Sounds good! Upload a CIM document and i will generate a draft screening memo for your review</div>   -->
                 </div>
            
             </div>
